samples/_failures_safe/1761442463_6bc4a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ea196fe.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_8ea196fe.c:153:24: error: expected ‘;’ at end of input
  153 |     tokenizer->position
      |                        ^
      |                        ;
./samples/SAFE/__tmp_8ea196fe.c:153:5: error: expected declaration or statement at end of input
  153 |     tokenizer->position
      |     ^~~~~~~~~
